--- a/statsModalTemplate.html
+++ b/statsModalTemplate.html
@@ -1,5 +1,4 @@
 <!-- This file includes embedded JS/CSS due to project type rules -->
-<script>
 <html>
   <head>
     <base target="_top">
@@ -122,7 +121,7 @@
           google.script.run
             .withFailureHandler(displayError)
             .withSuccessHandler(renderCharts)
-            .sheetService.getStatsData();
+            .getStatsData();
         });
       });
 
@@ -137,4 +136,3 @@
     </script>
   </body>
 </html>
-</script>
