--- a/sidebarTemplate.html
+++ b/sidebarTemplate.html
@@ -30,9 +30,9 @@
           <input type="number" id="weight" name="weight" min="0" step="0.1" />
         </div>
         <div class="button-group">
-          <button type="submit" id="saveBtn" class="btn primary">Save</button>
-          <button type="button" id="resetBtn" class="btn secondary">Reset</button>
-          <button type="button" id="statsBtn" class="btn link">View Statistics</button>
+          <button type="submit" id="saveBtn" class="btn btn-primary">Save</button>
+          <button type="button" id="resetBtn" class="btn btn-secondary">Reset</button>
+          <button type="button" id="statsBtn" class="btn btn-secondary">View Statistics</button>
         </div>
         <div class="spinner" id="spinner" hidden></div>
       </form>
@@ -40,14 +40,21 @@
     <script>
       // Populate meal type dropdown
       function populateMealTypes() {
-        var types = ['Breakfast','Snack','Lunch','Dinner'];
         var select = document.getElementById('mealType');
-        types.forEach(function(t) {
-          var opt = document.createElement('option');
-          opt.value = t.toLowerCase();
-          opt.textContent = t;
-          select.appendChild(opt);
-        });
+        google.script.run
+          .withFailureHandler(function(err) {
+            console.log('Failed to load meal types:', err);
+          })
+          .withSuccessHandler(function(types) {
+            if (!Array.isArray(types)) return;
+            types.forEach(function(t) {
+              var opt = document.createElement('option');
+              opt.value = String(t).toLowerCase();
+              opt.textContent = t;
+              select.appendChild(opt);
+            });
+          })
+          .getMealTypes();
       }
 
       function showLoading() {
