--- a/sidebarModalTheming.html
+++ b/sidebarModalTheming.html
@@ -42,7 +42,8 @@
   border-radius: var(--border-radius);
   cursor: pointer;
   font-size: 14px;
-  transition: background-color var(--transition-duration), opacity var(--transition-duration);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color var(--transition-duration), opacity var(--transition-duration), box-shadow var(--transition-duration);
 }
 
 .btn:focus,
@@ -53,24 +54,26 @@
 
 .btn-primary,
 .button-primary {
-  background-color: var(--primary-color);
+  background: linear-gradient(135deg, var(--primary-color), #66bb6a);
   color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .btn-primary:hover,
 .button-primary:hover {
-  opacity: 0.9;
+  opacity: 0.95;
 }
 
 .btn-secondary,
 .button-secondary {
-  background-color: var(--secondary-color);
+  background: linear-gradient(135deg, var(--secondary-color), #fff176);
   color: var(--primary-color);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .btn-secondary:hover,
 .button-secondary:hover {
-  opacity: 0.9;
+  opacity: 0.95;
 }
 
 .btn:disabled,
@@ -82,11 +85,16 @@
 .spinner {
   border: 4px solid var(--secondary-color);
   border-top: 4px solid var(--spinner-color);
+  border-right: 4px solid var(--spinner-color);
   border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  animation: spin 1s linear infinite;
+  width: 32px;
+  height: 32px;
+  animation: spin 0.8s linear infinite;
   display: inline-block;
+}
+#spinner {
+  text-align: center;
+  margin: 12px 0;
 }
 
 @keyframes spin {
